--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "csv-parser": "^2.3.2",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "mongodb": "^3.6.10",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2"
   }
